# advent2022

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
advent2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day22.py
subtitles/: day01_IT.srt  day02_EN.srt  day03_EN.srt  day08_IT.srt  day09_IT.srt  day0_EN.srt
