[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jacopo Farina", email = "jacopo1.farina@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "black>=22.10.0",
]
